# foxdbg-rs

./: .gitignore  Cargo.toml  Makefile  build.rs  cbindgen.toml  event.json  readme.md  release.sh
.github/workflows/: release.yml
c_test/: CMakeLists.txt  test.c
cmake/: foxdbgConfig.cmake
include/: foxdbg.h
src/: channel_manager.rs  channel_schemas.rs  core.rs  data_writer.rs  lib.rs  state.rs  types.rs
src/channels/: manager.rs  mod.rs  schemas.rs
src/channels/writer/: helpers.rs  mod.rs  scene.rs  sensor.rs  telemetry.rs
